Fixed md dialog issues on mobile feed leaderboard

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.css
@@ -764,6 +764,20 @@
 .md-dialog-container .community {
   max-width: calc(100% - 20px);
   max-height: calc(100% - 20px);
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: stretch;
+  align-items: stretch;
+  flex-direction: column;
+}
+.md-dialog-container .community .gamification-header {
+  flex-grow: 1;
+  flex-shrink: 0;
+}
+.md-dialog-container .community .content {
+  flex-shrink: 1;
+  overflow: auto;
 }
 .md-dialog-container .community md-toolbar {
   position: absolute;
